--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +7,7 @@
     <title>Jakarta Night Cars - Premium Car Community</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Exo+2:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
@@ -201,7 +202,7 @@
                         <h3>Barang apa aja</h3>
                         <p>deskripsiin barang nya disini</p>
                         <span class="price">IDR 999K</span>
-                        <a href="#contact" class="btn btn-small">Pre-order</a>
+                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
                     </div>
                 </div>
 
@@ -211,7 +212,7 @@
                         <h3>Barang apa aja</h3>
                         <p>deskripsiin barang nya disini</p>
                         <span class="price">IDR 999K</span>
-                        <a href="#contact" class="btn btn-small">Pre-order</a>
+                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
                     </div>
                 </div>
 
@@ -221,7 +222,7 @@
                         <h3>Barang apa aja</h3>
                         <p>deskripsiin barang nya disini</p>
                         <span class="price">IDR 999K</span>
-                        <a href="#contact" class="btn btn-small">Pre-order</a>
+                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
                     </div>
                 </div>
 
@@ -231,7 +232,7 @@
                         <h3>Barang apa aja</h3>
                         <p>deskripsiin barang nya disini</p>
                         <span class="price">IDR 999K</span>
-                        <a href="#contact" class="btn btn-small">Pre-order</a>
+                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
                     </div>
                 </div>
             </div>
@@ -323,6 +324,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
