--- a/index.html
+++ b/index.html
@@ -68,29 +68,11 @@
                         </div>
                         <div class="feature-item">
                             <div class="feature-icon">
-                                <i class="fas fa-users"></i>
-                            </div>
-                            <div class="feature-text">
-                                <h4>Active Community</h4>
-                                <p>193 members </p>
-                            </div>
-                        </div>
-                        <div class="feature-item">
-                            <div class="feature-icon">
                                 <i class="fas fa-car"></i>
                             </div>
                             <div class="feature-text">
                                 <h4>All Cars Welcome</h4>
                                 <p>From classics to modern supercars</p>
-                            </div>
-                        </div>
-                        <div class="feature-item">
-                            <div class="feature-icon">
-                                <i class="fas fa-camera"></i>
-                            </div>
-                            <div class="feature-text">
-                                <h4>Professional Shoots</h4>
-                                <p>Regular photo & video sessions</p>
                             </div>
                         </div>
                     </div>
@@ -147,7 +129,7 @@
                     <div class="event-content">
                         <h3>New Year Run Vol. 1</h3>
                         <div class="event-details">
-                            <p><i class="fas fa-map-marker-alt"></i> Pantai Indah Kapuk</p>
+                            <p><i class="fas fa-map-marker-alt"></i> PIK - BREZZA</p>
                             <p><i class="fas fa-clock"></i> 7:00 PM - End</p>
                         </div>
                         <p>All about sharing ideas, connecting with great people, and growing together. Can't wait to see what amazing conversations the next meetup brings!</p>
