--- a/index.html
+++ b/index.html
@@ -149,42 +149,14 @@
                 <div class="merch-item">
                     <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="JNC T-Shirt" class="merch-img">
                     <div class="merch-info">
-                        <h3>Barang apa aja</h3>
+                        <h3>coming soon</h3>
                         <p>deskripsiin barang nya disini</p>
                         <span class="price">IDR 999K</span>
                         <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
                     </div>
                 </div>
 
-                <div class="merch-item">
-                    <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="JNC T-Shirt" class="merch-img">
-                    <div class="merch-info">
-                        <h3>Barang apa aja</h3>
-                        <p>deskripsiin barang nya disini</p>
-                        <span class="price">IDR 999K</span>
-                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
-                    </div>
-                </div>
-
-                <div class="merch-item">
-                    <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="JNC T-Shirt" class="merch-img">
-                    <div class="merch-info">
-                        <h3>Barang apa aja</h3>
-                        <p>deskripsiin barang nya disini</p>
-                        <span class="price">IDR 999K</span>
-                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
-                    </div>
-                </div>
-
-                <div class="merch-item">
-                    <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="JNC T-Shirt" class="merch-img">
-                    <div class="merch-info">
-                        <h3>Barang apa aja</h3>
-                        <p>deskripsiin barang nya disini</p>
-                        <span class="price">IDR 999K</span>
-                        <a href="merchandise.html" class="btn btn-small" target="_blank">Pre-order</a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </section>
@@ -277,3 +249,4 @@
     <script src="./js/script.js"></script>
 </body>
 </html>
+
