--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="./assets/IMG_0528.webp" alt="New Year Run">
+                    <img src="./assets/IMG_0528.png" alt="New Year Run">
                     <div class="gallery-overlay">
                         <h4>New Year Run Vol. 1</h4>
                         <p>January 2026</p>
@@ -249,4 +249,5 @@
     <script src="./js/script.js"></script>
 </body>
 </html>
+
 
