--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Jakarta Night Cars aims to inspire the nation's youth and show the world that In
                         <div class="event-month">January</div>
                     </div>
                     <div class="event-content">
-                        <h3>New Year Run Vol. 1</h3>
+                        <h3>New Year Run </h3>
                         <div class="event-details">
                             <p><i class="fas fa-map-marker-alt"></i> PIK - BREZZA</p>
                             <p><i class="fas fa-clock"></i> 7:00 PM - End</p>
@@ -250,6 +250,7 @@ Jakarta Night Cars aims to inspire the nation's youth and show the world that In
     <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
