--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ Jakarta Night Cars aims to inspire the nation's youth and show the world that In
 
     <section class="merchandise" id="merchandise">
         <div class="container">
-            <h2 class="section-title">Community Merchandise</h2>
+            <h2 class="section-title">Merchandise</h2>
             <p class="section-subtitle">Show your pride with our exclusive Jakarta Night Cars merchandise.</p>
             
             <div class="merch-grid">
@@ -250,6 +250,7 @@ Jakarta Night Cars aims to inspire the nation's youth and show the world that In
     <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
