--- a/merchandise.html
+++ b/merchandise.html
@@ -3,278 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout - Jakarta Night Cars Merchandise</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Exo+2:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/merchandise.css">
+    <title>Document</title>
 </head>
 <body>
-    <header class="checkout-header">
-        <div class="container">
-            <a href="index.html" class="back-home">
-                <i class="fas fa-arrow-left"></i> Back to Home
-            </a>
-            <div class="checkout-logo">
-                <img src="./jnclogo.png" alt="JNC Logo">
-            </div>
-        </div>
-    </header>
-
-    <main class="checkout-container">
-        <div class="container">
-            <h1 class="checkout-title">Checkout Merchandise</h1>
-            <div class="checkout-content">
-                <div class="order-summary">
-                    <h2><i class="fas fa-shopping-bag"></i> Order Summary</h2>
-                    <div class="order-items">
-                        <div class="order-item">
-                            <div class="item-info">
-                                <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="JNC T-Shirt">
-                                <div class="item-details">
-                                    <h4>JNC Night Glow T-Shirt</h4>
-                                    <div class="size-selection">
-                                        <label>Size:</label>
-                                        <div class="size-options">
-                                            <button class="size-btn" data-size="XS">XS</button>
-                                            <button class="size-btn" data-size="S">S</button>
-                                            <button class="size-btn active" data-size="M">M</button>
-                                            <button class="size-btn" data-size="L">L</button>
-                                            <button class="size-btn" data-size="XL">XL</button>
-                                            <button class="size-btn" data-size="XXL">XXL</button>
-                                        </div>
-                                    </div>
-                                    <p class="item-price">IDR 250,000</p>
-                                </div>
-                            </div>
-                            <div class="item-quantity">
-                                <button class="qty-btn minus">-</button>
-                                <span class="qty">1</span>
-                                <button class="qty-btn plus">+</button>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="order-totals">
-                        <div class="total-row">
-                            <span>Subtotal</span>
-                            <span id="subtotal">IDR 250,000</span>
-                        </div>
-                        <div class="total-row">
-                            <span>Shipping</span>
-                            <span id="shipping">IDR 25,000</span>
-                        </div>
-                        <div class="total-row">
-                            <span>Tax (10%)</span>
-                            <span id="tax">IDR 25,000</span>
-                        </div>
-                        <div class="total-row grand-total">
-                            <span>Total Amount</span>
-                            <span id="total">IDR 300,000</span>
-                        </div>
-                    </div>
-                    <div class="payment-methods">
-                        <h3><i class="fas fa-qrcode"></i> Payment Method</h3>
-                        <div class="payment-options">
-                            <label class="payment-option active">
-                                <input type="radio" name="payment" value="qris" checked>
-                                <div class="payment-icon">
-                                    <i class="fas fa-qrcode"></i>
-                                </div>
-                                <div class="payment-info">
-                                    <span class="payment-name">QRIS</span>
-                                    <span class="payment-desc">Pay with any e-wallet via QR Code</span>
-                                </div>
-                            </label>
-                        </div>
-                    </div>
-                    <div class="payment-instructions">
-                        <h3><i class="fas fa-mobile-alt"></i> How to Pay</h3>
-                        <ol>
-                            <li>Open your e-wallet app (GoPay, OVO, DANA, LinkAja, etc.)</li>
-                            <li>Tap "Scan QR Code" or "Pay"</li>
-                            <li>Scan the QR code</li>
-                            <li>Confirm the payment amount</li>
-                            <li>Complete the transaction</li>
-                        </ol>
-                    </div>
-                </div>
-                <div class="checkout-form">
-                    <h2><i class="fas fa-user"></i> Personal Information</h2>
-                    <form id="checkoutForm">
-                        <div class="form-group">
-                            <label for="fullName">Full Name *</label>
-                            <input type="text" id="fullName" name="fullName" required placeholder="Enter your full name">
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="email">Email Address *</label>
-                                <input type="email" id="email" name="email" required placeholder="your.email@example.com">
-                            </div>
-                            <div class="form-group">
-                                <label for="phone">Phone Number *</label>
-                                <input type="tel" id="phone" name="phone" required placeholder="08xxxxxxxxxx">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="address">Shipping Address *</label>
-                            <textarea id="address" name="address" rows="3" required placeholder="Full address including postal code"></textarea>
-                        </div>
-                        <div class="form-row">
-                            <div class="form-group">
-                                <label for="city">City *</label>
-                                <input type="text" id="city" name="city" required placeholder="City">
-                            </div>
-                            <div class="form-group">
-                                <label for="postalCode">Postal Code *</label>
-                                <input type="text" id="postalCode" name="postalCode" required placeholder="Postal code">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="province">Province *</label>
-                            <input type="text" id="province" name="province" required placeholder="Example : DKI Jakarta">
-                        </div>
-                        <div class="form-group">
-                            <label for="notes">Order Notes (Optional)</label>
-                            <textarea id="notes" name="notes" rows="2" placeholder="Special instructions, color preference, etc."></textarea>
-                        </div>
-                        <div class="form-group checkbox-group">
-                            <input type="checkbox" id="terms" name="terms" required>
-                            <label for="terms">I agree to the <a href="#" class="terms-link">Terms & Conditions</a> and understand that this is a pre-order item with estimated delivery in 2-3 weeks.</label>
-                        </div>
-                        <button type="submit" class="btn-pay" id="payButton">
-                            <i class="fas fa-qrcode"></i> Generate QRIS Payment
-                        </button>
-                        <p class="secure-note">
-                            <i class="fas fa-shield-alt"></i> Your payment is secured and encrypted by Midtrans
-                        </p>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </main>
-
-    <div id="paymentModal" class="payment-modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button class="modal-close" id="closeModal">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div id="successState" class="modal-state hidden">
-                    <div class="status-icon success">
-                        <i class="fas fa-check-circle"></i>
-                    </div>
-                    <h2>Payment Successful!</h2>
-                    <div class="order-details">
-                        <div class="detail-row">
-                            <span class="detail-label">Order ID:</span>
-                            <span id="successOrderId" class="detail-value">-</span>
-                        </div>
-                        <div class="detail-row">
-                            <span class="detail-label">Transaction ID:</span>
-                            <span id="successTransactionId" class="detail-value">-</span>
-                        </div>
-                        <div class="detail-row">
-                            <span class="detail-label">Amount:</span>
-                            <span id="successAmount" class="detail-value">-</span>
-                        </div>
-                        <div class="detail-row">
-                            <span class="detail-label">Payment Method:</span>
-                            <span id="successPaymentMethod" class="detail-value">-</span>
-                        </div>
-                    </div>
-                    <p class="success-message">Thank you for your purchase! Your order has been confirmed and will be processed shortly. You will receive an email confirmation with your order details.</p>
-                    <div class="modal-actions">
-                        <button id="continueShopping" class="btn-primary">
-                            <i class="fas fa-shopping-bag"></i> Continue Shopping
-                        </button>
-                    </div>
-                </div>
-                <div id="pendingState" class="modal-state hidden">
-                    <div class="status-icon pending">
-                        <i class="fas fa-clock"></i>
-                    </div>
-                    <h2>Payment Pending</h2>
-                    <div class="order-details">
-                        <div class="detail-row">
-                            <span class="detail-label">Order ID:</span>
-                            <span id="pendingOrderId" class="detail-value">-</span>
-                        </div>
-                        <div class="detail-row">
-                            <span class="detail-label">Transaction ID:</span>
-                            <span id="pendingTransactionId" class="detail-value">-</span>
-                        </div>
-                        <div class="detail-row">
-                            <span class="detail-label">Amount:</span>
-                            <span id="pendingAmount" class="detail-value">-</span>
-                        </div>
-                    </div>
-                    <p class="pending-message">Your payment is being processed. Please complete the payment in your e-wallet app. You will receive a notification once the payment is confirmed.</p>
-                    <div class="payment-instructions">
-                        <h4><i class="fas fa-info-circle"></i> What to do next:</h4>
-                        <ol>
-                            <li>Open your e-wallet app (GoPay, OVO, DANA, etc.)</li>
-                            <li>Check your pending transactions</li>
-                            <li>Complete the payment if needed</li>
-                            <li>Wait for confirmation email</li>
-                        </ol>
-                    </div>
-                    <div class="modal-actions">
-                        <button id="closePending" class="btn-primary">
-                            <i class="fas fa-check"></i> Understood
-                        </button>
-                    </div>
-                </div>
-                <div id="errorState" class="modal-state hidden">
-                    <div class="status-icon error">
-                        <i class="fas fa-exclamation-circle"></i>
-                    </div>
-                    <h2>Payment Failed</h2>
-                    <div class="order-details">
-                        <div class="detail-row">
-                            <span class="detail-label">Order ID:</span>
-                            <span id="errorOrderId" class="detail-value">-</span>
-                        </div>
-                        <div class="detail-row">
-                            <span class="detail-label">Error Message:</span>
-                            <span id="errorMessage" class="detail-value">-</span>
-                        </div>
-                    </div>
-                    <p class="error-message">We couldn't process your payment. Please try again or use a different payment method.</p>
-                    <div class="error-suggestions">
-                        <h4><i class="fas fa-lightbulb"></i> Suggestions:</h4>
-                        <ul>
-                            <li>Check your internet connection</li>
-                            <li>Ensure you have sufficient balance</li>
-                            <li>Try a different e-wallet or payment method</li>
-                            <li>Contact your bank if needed</li>
-                        </ul>
-                    </div>
-                    <div class="modal-actions">
-                        <button id="retryPayment" class="btn-secondary">
-                            <i class="fas fa-redo"></i> Try Again
-                        </button>
-                        <button id="changePayment" class="btn-primary">
-                            <i class="fas fa-credit-card"></i> Change Payment Method
-                        </button>
-                    </div>
-                </div>
-                <div id="loadingState" class="modal-state">
-                    <div class="status-icon loading">
-                        <i class="fas fa-spinner fa-spin"></i>
-                    </div>
-                    <h2>Processing Payment</h2>
-                    <p>Please wait while we process your payment...</p>
-                    <div class="loading-progress">
-                        <div class="progress-bar">
-                            <div class="progress-fill"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <script src="./js/merchandise.js"></script>
+    
 </body>
 </html>
