--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jakarta Night Cars - Premium Car Community</title>
+    <title>JAKARTA NIGHT CARS</title>
+    <meta name="google-site-verification" content="9hQ7ZvrfXzm53VofSdCxNuMTWsAB4ULdjQj3_dpO_Mg" />
+    <meta name="description" content="❗ PP, Business, endorse ❗ DM @jakarta.nightcars - : @seanmurphym : @jcncgarage.id · PT. · JAKARTA NIGHT CARS GARAGE PRICELIST." />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;700;900&family=Exo+2:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/style.css">
