--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <h2 class="section-title">About Our Community</h2>
             <div class="about-content">
                 <div class="about-text">
-                    <p>.Jakarta Night Cars. Founder Sean Murphy created in 2023. Jakarta Night Cars aims to inspire the nation's youth and show the world that Indonesian car culture is just as cool those in other countries..</p>
-                    <p>.</p>
+                    <p>Jakarta Night Cars. Founder Sean Murphy created in 2023. Jakarta Night Cars aims to inspire the nation's youth and show the world that Indonesian car culture is just as cool those in other countries..</p>
+                    <p></p>
                     
                     <div class="about-features">
                         <div class="feature-item">
@@ -235,7 +235,7 @@
                     <h3>Contact</h3>
                     <ul>
                         <li><a href="https://instagram.com/jakarta.nightcars">Instagram</a></li>
-                        <li><a href="https://youtube.com/@jakartanightcarss">Youtube</a></li>
+                        <li><a href="https://www.youtube.com/@Jakartanightcars</a></li>
                         <li><a href="https://discord.gg/pZTcyNs8C2">Discord Server</a></li>
                         <li><a href="https://www.tiktok.com/@jakarta.nightcarss">Tiktok</a></li>
                     </ul>
@@ -251,6 +251,7 @@
     <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
