--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                     <span class="social-handle">@jakarta.nightcarss</span>
                 </a>
                 
-                <a href="https://youtube.com/@jakartanightcarss" target="_blank" class="social-icon">
+                <a href="https://www.youtube.com/@Jakartanightcars" target="_blank" class="social-icon">
                     <div class="social-icon-wrapper youtube">
                         <i class="fab fa-youtube"></i>
                     </div>
@@ -251,6 +251,7 @@
     <script src="./js/script.js"></script>
 </body>
 </html>
+
 
 
 
