--- a/merchandise.html
+++ b/merchandise.html
@@ -225,21 +225,21 @@
                             <tbody>
                                 <tr>
                                     <td>M</td>
-                                    <td>106-112</td>
-                                    <td>72</td>
-                                    <td>Regular</td>
+                                    <td>160-171cm</td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <td>L</td>
-                                    <td>112-117</td>
-                                    <td>74</td>
-                                    <td>Regular</td>
+                                    <td>171-180cm</td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                                 <tr>
                                     <td>XL</td>
-                                    <td>117-122</td>
-                                    <td>76</td>
-                                    <td>Relaxed</td>
+                                    <td>180&abvove</td>
+                                    <td></td>
+                                    <td></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -277,4 +277,5 @@
 </body>
 
 </html>
+
 
