--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="hero-btns">
                     <a href="#events" class="btn">Upcoming Events</a>
                     <a href="#contact" class="btn btn-outline">Join Community</a>
-                    <a href="#merchandise" class="btn btn-outline">Buy JNC Hoodie</a>
+                    <a href="#merchandise" class="btn btn-outline">Shop</a>
                 </div>
             </div>
             <div class="hero-image"></div>
@@ -146,7 +146,7 @@
     <section class="merchandise" id="merchandise">
         <div class="container">
             <h2 class="section-title">JNC Collection</h2>
-            <p class="section-subtitle">Show your pride with our exclusive Jakarta Night Cars merchandise.</p>
+            <p class="section-subtitle">Show your pride with our exclusive Jakarta Night Cars Collection.</p>
             
             <div class="merch-grid">
                 <div class="merch-item">
