--- a/merchandise.html
+++ b/merchandise.html
@@ -185,11 +185,11 @@
                             </div>
                             <div class="summary-item">
                                 <span>Price:</span>
-                                <span>IDR 450,000</span>
+                                <span>IDR 400,000</span>
                             </div>
                             <div class="summary-item total">
                                 <span>Total:</span>
-                                <span>IDR 450,000</span>
+                                <span>IDR 400,000</span>
                             </div>
                         </div>
                         
@@ -221,6 +221,10 @@
                         <table class="size-table">
                             <thead>
                                 <h2>SIZING RECOMMENDATION</h2>
+                                 <tr>
+                                    <th>Size</th>
+                                    <th>Height</th>
+                                </tr>
                             </thead>
                             <tbody>
                                 <tr>
@@ -237,7 +241,7 @@
                                 </tr>
                                 <tr>
                                     <td>XL</td>
-                                    <td>180&abvove</td>
+                                    <td>180-above</td>
                                     <td></td>
                                     <td></td>
                                 </tr>
