--- a/merchandise.html
+++ b/merchandise.html
@@ -27,7 +27,7 @@
                 <div class="product-gallery">
                     <div class="main-image-container">
                         <div class="main-image">
-                            <img src="https://www.mdesiigns.com/cdn/shop/files/2_bd317869-f68f-4d67-819b-06d475fcc36b.png" 
+                            <img src="assets/IMG_1732.JPG" 
                                  alt="JNC Hoodie Front" id="currentImage">
                         </div>
                         
