--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             
             <div class="merch-grid">
                 <div class="merch-item">
-                    <img src="https://images.unsplash.com/photo-1523474253046-8cd2748b5fd2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="JNC T-Shirt" class="merch-img">
+                    <img src="assets/IMG_1660.JPG" alt="JNC T-Shirt" class="merch-img">
                     <div class="merch-info">
                         <h3>JNC HOODIE "Nobody gives a sh*t about. your car"</h3>
                         <p>JNC HOODIE COLLECTION</p>
